# kryptos

./: .env.example  .gitignore  README.md  pyproject.toml
kryptos/: __init__.py  config.py  main.py
kryptos/agents/: emotion.py  grounding.py  internal_monologue.py  player.py  relationship.py  speech_length.py
kryptos/api/: assets.py  characters.py  config.py  deps.py  messages.py  roster.py  sessions.py  templates.py  world_book.py
kryptos/core/: context.py  visibility.py  world_book.py
kryptos/games/: class_trial_lite.py  prisoners_dilemma.py  registry.py
kryptos/llm/: client.py
kryptos/models/: auto_dialogue.py  character.py  message.py  roster.py  session.py  session_mute.py  template.py  world_book.py
kryptos/storage/: sqlite_repo.py
scripts/: backup-data.ps1  backup-data.sh  restart-server.ps1
static/: app.js  bubble-ui.js  char-ui.js  font-picker.js  format-message.js  index.html  settings.html  settings.js  sidebar-sections.js  style.css  theme.js  world-book.js
