[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kryptos"
version = "0.1.0"
description = "Kryptos — asymmetric-information multi-agent game runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
kryptos = "kryptos.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["kryptos*"]
